--- a/elasticsearch-api/utils/Gemfile
+++ b/elasticsearch-api/utils/Gemfile
@@ -24,5 +24,5 @@ gem 'multi_json'
 gem 'pry'
 gem 'thor'
 
-gem 'rubocop', '>= 1.51' unless defined?(JRUBY_VERSION) && Gem::Version.new(JRUBY_VERSION) <= Gem::Version.new('9.4')
+gem 'rubocop', '>= 1.51' unless defined?(JRUBY_VERSION)
 gem 'debug' unless defined?(JRUBY_VERSION)
