--- a/.github/workflows/9.0.yml
+++ b/.github/workflows/9.0.yml
@@ -1,13 +1,13 @@
-name: main
+name: 9.0
 on:
   push:
     branches:
-      - main
+      - 9.0
   pull_request:
     branches:
-      - main
+      - 9.0
 jobs:
-  test-main:
+  test-9.0:
     env:
       TEST_ES_SERVER: http://localhost:9250
       PORT: 9250
