--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['head', '3.2', '3.3', '3.4', 'jruby-9.3', 'jruby-9.4', 'jruby-head']
+        ruby: ['head', '3.2', '3.3', '3.4', 'jruby-9.4', 'jruby-10.0']
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
