--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -63,7 +63,7 @@ steps:
     env:
       RUBY_VERSION: "3.4"
       STACK_VERSION: 8.18.0-SNAPSHOT
-      ES_YAML_TESTS_BRANCH: 8.x
+      ES_YAML_TESTS_BRANCH: 8.18
       TRANSPORT_VERSION: "8.3"
       RUBY_SOURCE: "ruby"
       TEST_SUITE: "platinum"
