--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -69,7 +69,7 @@ steps:
       - label: 'Destroy :elasticsearch: Serverless projects'
         depends_on:
           - step: run-serverless-tests
-            allow_failure: true
+            allow_failure: false
         agents:
           image: 'docker.elastic.co/appex-qa/qaf:latest'
         env:
