[Tests] Skips tsdb nested fields tests

--- a/elasticsearch-api/spec/rest_api/skipped_tests_free.yml
+++ b/elasticsearch-api/spec/rest_api/skipped_tests_free.yml
@@ -243,3 +243,6 @@
 -
   :file: 'nodes.stats/11_indices_metrics.yml'
   :description: 'indices mappings exact count test for indices level'
+-
+  :file: 'tsdb/160_nested_fields.yml'
+  :description: '*'
