--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -5,7 +5,7 @@ steps:
     env:
       RUBY_VERSION: "{{ matrix.ruby }}"
       TEST_SUITE: "{{ matrix.suite }}"
-      STACK_VERSION: 8.17.5-SNAPSHOT
+      STACK_VERSION: 8.17.7-SNAPSHOT
       TRANSPORT_VERSION: "{{ matrix.transport }}"
       RUBY_SOURCE: "{{ matrix.ruby_source }}"
       QUIET: false
@@ -62,8 +62,8 @@ steps:
       provider: "gcp"
     env:
       RUBY_VERSION: "3.3"
-      STACK_VERSION: 8.17.5-SNAPSHOT
-      ES_YAML_TESTS_BRANCH: 8.17
+      STACK_VERSION: 8.17.7-SNAPSHOT
+      ES_YAML_TESTS_BRANCH: "8.17"
       TRANSPORT_VERSION: "8.3"
       RUBY_SOURCE: "ruby"
       TEST_SUITE: "platinum"
