--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -26,69 +26,13 @@ steps:
     env:
       RUBY_VERSION: '{{ matrix.ruby }}'
       STACK_VERSION: 9.1.0-SNAPSHOT
-      ES_YAML_TESTS_BRANCH: main
+      ES_YAML_TESTS_BRANCH: 9.1
       TRANSPORT_VERSION: '{{ matrix.transport }}'
       RUBY_SOURCE: '{{ matrix.ruby_source }}'
       TEST_SUITE: platinum
       DEBUG: true
     command: ./.buildkite/run-yaml-tests.sh
     artifact_paths: elasticsearch-api/tmp/*
-  - group: 'Elasticsearch Serverless :elasticsearch:'
-    steps:
-      - label: 'Create :elasticsearch: Serverless projects'
-        key: create-serverless
-        agents:
-          image: 'docker.elastic.co/appex-qa/qaf:latest'
-        env:
-          EC_PROJECT_PREFIX: ruby
-          EC_REGISTER_BACKEND: buildkite
-          EC_REGION: aws-eu-west-1
-          EC_ENV: qa
-        commands:
-          - mkdir ~/.elastic
-          - touch ~/.elastic/cloud.json
-          - >-
-            echo "{\"api_key\":{\"qa\":\"$(vault read -field=qa
-            secret/ci/elastic-elasticsearch-ruby/cloud-access)\"}}" >
-            ~/.elastic/cloud.json
-          - ./.buildkite/create-serverless.sh
-      - label: 'Run :elasticsearch: Serverless :rspec: Tests :ruby:'
-        key: run-serverless-tests
-        depends_on:
-          - step: create-serverless
-        soft_fail:
-          - exit_status: "*"
-        agents:
-          provider: gcp
-        env:
-          RUBY_VERSION: '3.4'
-          RUBY_SOURCE: ruby
-          TEST_SUITE: serverless
-          ES_YAML_TESTS_BRANCH: main
-          QUIET: false
-        command: ./.buildkite/run-yaml-tests.sh
-        artifact_paths: elasticsearch-api/tmp/*
-      - label: 'Destroy :elasticsearch: Serverless projects'
-        depends_on:
-          - step: run-serverless-tests
-            allow_failure: true
-        agents:
-          image: 'docker.elastic.co/appex-qa/qaf:latest'
-        env:
-          EC_REGISTER_BACKEND: buildkite
-          EC_ENV: qa
-          EC_REGION: aws-eu-west-1
-        commands:
-          - mkdir ~/.elastic
-          - touch ~/.elastic/cloud.json
-          - >-
-            export EC_PROJECT_NAME=`buildkite-agent meta-data get
-            "EC_PROJECT_NAME"`
-          - >-
-            echo "{\"api_key\":{\"qa\":\"$(vault read -field=qa
-            secret/ci/elastic-elasticsearch-ruby/cloud-access)\"}}" >
-            ~/.elastic/cloud.json
-          - qaf elastic-cloud projects delete
   - wait: ~
     continue_on_failure: true
   - label: Log Results
