--- a/elasticsearch-api/spec/rest_api/skipped_tests_free.yml
+++ b/elasticsearch-api/spec/rest_api/skipped_tests_free.yml
@@ -243,3 +243,12 @@
 -
   :file: 'nodes.stats/11_indices_metrics.yml'
   :description: 'indices mappings exact count test for indices level'
+-
+  :file: 'data_stream/10_basic.yml'
+  :description: '*'
+-
+  :file: 'data_stream/150_tsdb.yml'
+  :description: '*'
+-
+  :file: 'data_stream/190_failure_store_redirection.yml'
+  :description: '*'
