--- a/elasticsearch-api/spec/rest_api/skipped_tests_free.yml
+++ b/elasticsearch-api/spec/rest_api/skipped_tests_free.yml
@@ -246,3 +246,15 @@
 -
   :file: 'tsdb/160_nested_fields.yml'
   :description: '*'
+-
+  :file: 'data_stream/10_basic.yml'
+  :description: '*'
+-
+  :file: 'data_stream/150_tsdb.yml'
+  :description: '*'
+-
+  :file: 'data_stream/190_failure_store_redirection.yml'
+  :description: '*'
+-
+  :file: 'data_stream/240_data_stream_settings.yml'
+  :description: '*'
