--- a/elasticsearch-api/spec/rest_api/skipped_tests_platinum.yml
+++ b/elasticsearch-api/spec/rest_api/skipped_tests_platinum.yml
@@ -296,3 +296,30 @@
   :file: 'inference/90_semantic_text_highlighter_bwc.yml'
   :description: '*'
 # ENDS TODO: 8.19 - 30 June 2025
+-
+  :file: 'mustache/10_webhook.yml'
+  :description: '*'
+-
+  :file: 'mustache/50_webhook_url_escaping.yml'
+  :description: '*'
+-
+  :file: 'watcher/execute_watch/10_basic.yml'
+  :description: '*'
+-
+  :file: 'watcher/execute_watch/60_http_input.yml'
+  :description: '*'
+-
+  :file: 'watcher/settings_endpoints/10_watcher_settings.yml'
+  :description: '*'
+-
+  :file: 'watcher/execute_watch/30_throttled.yml'
+  :description: '*'
+-
+  :file: 'watcher/execute_watch/40_ignore_condition.yml'
+  :description: '*'
+-
+  :file: 'watcher/execute_watch/50_action_mode.yml'
+  :description: '*'
+-
+  :file: 'watcher/put_watch/90_auto_create_index.yml'
+  :description: '*'
