--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -4,8 +4,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: ruby/setup-ruby@v1
+    - uses: actions/checkout@v4.3.0
+      with:
+        persist-credentials: false
+    - uses: ruby/setup-ruby@v1.263.0
       with:
         ruby-version: '3.4'
     - name: Check license headers
