--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
         ruby: ['head', '3.2', '3.3', '3.4', 'jruby-9.3', 'jruby-9.4', 'jruby-10.0']
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v4.3.0
+      with:
+        persist-credentials: false
     - name: Increase system limits
       run: |
         sudo swapoff -a
@@ -27,7 +29,7 @@ jobs:
     - uses: elastic/elastic-github-actions/elasticsearch@master
       with:
         stack-version: 9.2.0-SNAPSHOT
-    - uses: ruby/setup-ruby@v1
+    - uses: ruby/setup-ruby@v1.263.0
       with:
         ruby-version: ${{ matrix.ruby }}
     - name: Build
