--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         ruby: ['head', '3.2', '3.3', '3.4', 'jruby-9.3', 'jruby-9.4', 'jruby-10.0']
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4.3.0
+    - uses: actions/checkout@v9.2.0-SNAPSHOT
       with:
         persist-credentials: false
     - name: Increase system limits
