Skips streams tests, connector.last_sync endpoints removed from spec

--- a/elasticsearch-api/spec/rest_api/skipped_tests_free.yml
+++ b/elasticsearch-api/spec/rest_api/skipped_tests_free.yml
@@ -258,3 +258,6 @@
 -
   :file: 'data_stream/240_data_stream_settings.yml'
   :description: '*'
+-
+  :file: 'streams/logs/10_basic.yml'
+  :description: '*'
