--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -26,7 +26,7 @@ steps:
     env:
       RUBY_VERSION: '{{ matrix.ruby }}'
       STACK_VERSION: 9.2.1-SNAPSHOT
-      ES_YAML_TESTS_BRANCH: main
+      ES_YAML_TESTS_BRANCH: 9.2
       TRANSPORT_VERSION: '{{ matrix.transport }}'
       RUBY_SOURCE: '{{ matrix.ruby_source }}'
       TEST_SUITE: platinum
