--- a/.github/workflows/otel.yml
+++ b/.github/workflows/otel.yml
@@ -43,4 +43,4 @@ jobs:
       - name: elasticsearch
         run: cd elasticsearch && bundle exec rake test:all
       - name: elasticsearch-api
-        run: rake es:download_artifacts[9.3.0-SNAPSHOT] && cd elasticsearch-api && bundle exec rake test:all
+        run: rake es:download_artifacts[main] && cd elasticsearch-api && bundle exec rake test:all
