[TESTS] Updates skipped tests platinum

--- a/elasticsearch-api/spec/rest_api/skipped_tests_platinum.yml
+++ b/elasticsearch-api/spec/rest_api/skipped_tests_platinum.yml
@@ -462,3 +462,6 @@
   :file: 'security/20_test_run_as_execute_watch.yml'
   :description: '*'
 
+-
+  :file: 'downsample/90_multi_fields.yml'
+  :description: '*'
