--- a/.github/workflows/9.3.yml
+++ b/.github/workflows/9.3.yml
@@ -1,11 +1,11 @@
-name: main
+name: 9.3
 on:
   push:
     branches:
-      - main
+      - 9.3
   pull_request:
     branches:
-      - main
+      - 9.3
 jobs:
   test-main:
     env:
