--- a/scripts/benchmark-vectors/Gemfile
+++ b/scripts/benchmark-vectors/Gemfile
@@ -14,14 +14,14 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-require 'spec_helper'
+source 'https://rubygems.org'
 
-describe Elasticsearch::Client do
-  describe '#pack_dense_vector' do
-    let(:client) { Elasticsearch::Client.new }
-
-    it 'serializes in expected format' do
-      expect(client.pack_dense_vector([1.0, 2.0])).to eq 'P4AAAEAAAAA='
-    end
-  end
+if defined?(JRUBY_VERSION)
+  gem 'jrjackson'
+else
+  gem 'debug'
 end
+gem 'elasticsearch-api', path: File.expand_path('../../elasticsearch-api', __dir__)
+gem 'elasticsearch', path: File.expand_path('../../elasticsearch', __dir__)
+gem 'multi_json'
+gem 'rake'
