--- a/scripts/benchmark-vectors/Gemfile
+++ b/scripts/benchmark-vectors/Gemfile
@@ -16,5 +16,11 @@
 # under the License.
 source 'https://rubygems.org'
 
-gem 'debug' unless defined?(JRUBY_VERSION)
-gem 'elasticsearch', git: 'https://github.com/elastic/elasticsearch-ruby.git', ref: 'vector64'
+if defined?(JRUBY_VERSION)
+  gem 'jrjackson'
+else
+  gem 'debug'
+end
+gem 'elasticsearch-api', path: File.expand_path('../../elasticsearch-api', __dir__)
+gem 'elasticsearch', path: File.expand_path('../../elasticsearch', __dir__)
+gem 'multi_json'
