--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -27,7 +27,7 @@ steps:
     env:
       RUBY_VERSION: '{{ matrix.ruby }}'
       STACK_VERSION: 9.3.0-SNAPSHOT
-      ES_YAML_TESTS_BRANCH: main
+      ES_YAML_TESTS_BRANCH: 9.3
       TRANSPORT_VERSION: '{{ matrix.transport }}'
       RUBY_SOURCE: '{{ matrix.ruby_source }}'
       TEST_SUITE: platinum
